# ivi-message-bus

./: CMakeLists.txt  LICENSE  README.md
include/broker/: MessageBroker.h  message.h
include/ecu/: AdasECU.h  BaseECU.h  BatteryECU.h  BodyECU.h  EngineECU.h
include/subscribers/: AlertManager.h  Dashboard.h  DataLogger.h  FaultInjector.h  ISubscriber.h
src/: main.cpp
src/broker/: MessageBroker.cpp
src/ecu/: AdasECU.cpp  BaseECU.cpp  BatteryECU.cpp  BodyECU.cpp  EngineECU.cpp
src/subscribers/: AlertManager.cpp  Dashboard.cpp  DataLogger.cpp
